--- a/core/main-service/Dockerfile
+++ b/core/main-service/Dockerfile
@@ -1,6 +1,7 @@
-FROM eclipse-temurin:21-jre-alpine
-WORKDIR /app
+FROM eclipse-temurin:21-jre-jammy
+ENV TZ=Europe/Moscow
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+VOLUME /tmp
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
-EXPOSE 8085
-ENTRYPOINT ["java","-jar","/app/app.jar"]
+ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -jar /app.jar"]
